--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,34 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
+.packages
 .pub/
-/build/
+build/
+*.lock
 
-# Symbolication related
-app.*.symbols
+# Generated plugin registrants
+linux/flutter/generated_plugin_registrant.*
+macos/Flutter/GeneratedPluginRegistrant.*
+windows/flutter/generated_plugin_registrant.*
+windows/flutter/generated_plugins.cmake
+linux/flutter/generated_plugins.cmake
 
-# Obfuscation related
-app.*.map.json
+# Xcode
+ios/Flutter/Flutter.framework/
+ios/Flutter/Flutter.podspec
+ios/Flutter/engine/
+ios/Flutter/App.framework
+ios/Flutter/FlutterPluginRegistrant/
+ios/ServiceDefinitions.json
+ios/Pods/
+ios/Runner.xcworkspace
+ios/Flutter/Debug.xcconfig
+ios/Flutter/Release.xcconfig
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Android
+android/.gradle/
+android/.idea/
+android/local.properties
+android/app/build/
 
-.fake
+# VS Code
+.vscode/
