--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -44,8 +44,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.11.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo-icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
