--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^1.0.0
+  curved_navigation_bar: ^1.0.0 # Check for the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
