--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -98,5 +98,5 @@ flutter:
     - assets/images/
     # You can also include entire directories
     - assets/icons/
-    - assets/fonts/
     - assets/icons/NavBar/
+    - assets/icons/AppBar/
