chore: Update npm dependency to latest stable version

--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -14,5 +14,8 @@
     "Seyoni"
   ],
   "author": "Ahzem",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
