--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "back-end",
+  "name": "seyoni",
   "version": "1.0.0",
-  "description": "Back-End for Seyoni",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "Seyoni"
-  },
-  "keywords": [
-    "Seyoni"
-  ],
   "author": "Ahzem",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
