--- a/Front-End/android/settings.gradle
+++ b/Front-End/android/settings.gradle
@@ -22,4 +22,7 @@ plugins {
     id "org.jetbrains.kotlin.android" version "1.7.10" apply false
 }
 
-include ":app"
+// settings.gradle
+include ':app'
+include ':androidModule1'
+include ':androidModule2'
