--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -30,17 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^1.0.0
+  flutter_svg: ^2.0.10+1
   curved_navigation_bar: ^1.0.0 # Check for the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.3.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.13.3
+  http: ^1.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
