chore: finalized the sign in sign up backend, Add AlertBox icons for login and error messages

--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -103,4 +103,5 @@ flutter:
     - assets/icons/
     - assets/icons/NavBar/
     - assets/icons/AppBar/
+    - assets/icons/AlertBox/
     - assets/svg/
