--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.3.1
   jwt_decoder: ^2.0.1
+  country_picker: ^2.0.26
 
 dev_dependencies:
   flutter_test:
