--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "path-to-regexp": "^8.1.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
