--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   country_picker: ^2.0.26
   curved_navigation_bar: ^1.0.6
   flutter_lints: ^5.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
