--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   country_picker: ^2.0.26
   curved_navigation_bar: ^1.0.6
   flutter_lints: ^5.0.0
+  google_maps_flutter: ^2.9.0
+  geolocator: ^13.0.1
+  image_picker: ^1.1.2
+  flutter_sound: ^9.16.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
