--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_sound: ^9.16.3
   permission_handler: ^11.3.1
   intl: ^0.19.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
