--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -35,8 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   jwt_decoder: ^2.0.1
-  flutter_svg: ^2.0.10+1
-  http: ^1.2.2
   shared_preferences: ^2.3.2
   country_picker: ^2.0.26
   curved_navigation_bar: ^1.0.6
@@ -48,6 +46,10 @@ dependencies:
   permission_handler: ^11.3.1
   intl: ^0.19.0
   location: ^6.0.2
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  flutter_svg: ^2.0.9
+  http: ^0.13.6
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
