--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -18,6 +18,9 @@
   "author": "Ahzem",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.667.0",
+    "@aws-sdk/lib-storage": "^3.667.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -30,8 +33,11 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "path-to-regexp": "^8.2.0",
     "send": "^0.19.0",
     "serve-static": "^1.16.2"
