--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_svg: ^2.0.9
   http: ^0.13.6
   geocoding: ^3.0.0
+  flutter_typeahead: ^5.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
