--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   geocoding: ^3.0.0
   flutter_typeahead: ^4.0.0
   provider: ^6.1.2
+  http_parser: ^4.0.2
+  mime: ^1.0.6
 
 dev_dependencies:
   flutter_test:
