--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   provider: ^6.1.2
   http_parser: ^4.0.2
   mime: ^1.0.6
+  flutter_dotenv: ^5.1.0
+  flutter_google_places: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +94,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/icons/
     - assets/icons/NavBar/
