--- a/Front-End/android/app/build.gradle
+++ b/Front-End/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
 
 android {
@@ -21,6 +22,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        resValue "string", "GOOGLE_PLACES_API_KEY", project.env.GOOGLE_PLACES_API_KEY
         applicationId = "com.example.seyoni"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
@@ -41,4 +43,12 @@ android {
 
 flutter {
     source = "../.."
+}
+
+project.ext.env = [
+    GOOGLE_PLACES_API_KEY: getEnvVar("GOOGLE_PLACES_API_KEY")
+]
+
+def getEnvVar(String key) {
+    return System.getenv()[key] ?: ""
 }
