--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   mime: ^1.0.6
   flutter_dotenv: ^5.1.0
   flutter_google_places: ^0.3.0
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
