--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_google_places: ^0.3.0
   camera: ^0.11.0+2
+  flutter_keyboard_visibility: ^5.4.1
 
 dev_dependencies:
   flutter_test:
