--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -18,13 +18,15 @@
   "author": "Ahzem",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.667.0",
+    "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/lib-storage": "^3.667.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
