--- a/Front-End/android/app/build.gradle
+++ b/Front-End/android/app/build.gradle
@@ -16,7 +16,7 @@ def getEnvVar(String key) {
 
 android {
     namespace = "com.example.seyoni"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 33
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -34,10 +34,10 @@ android {
         applicationId = "com.example.seyoni"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdk = 21
+        targetSdk = 33
+        versionCode = 1
+        versionName = "1.0"
     }
 
     buildTypes {
