--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -34,29 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  jwt_decoder: ^2.0.1
   shared_preferences: ^2.3.2
-  country_picker: ^2.0.26
-  curved_navigation_bar: ^1.0.6
-  flutter_lints: ^5.0.0
-  google_maps_flutter: ^2.9.0
-  geolocator: ^13.0.1
-  image_picker: ^1.1.2
-  flutter_sound: ^9.16.3
-  permission_handler: ^11.3.1
-  intl: ^0.19.0
-  location: ^6.0.2
-  google_maps_webservice: ^0.0.20-nullsafety.5
-  flutter_svg: ^2.0.9
-  http: ^0.13.6
-  geocoding: ^3.0.0
+  flutter_dotenv: ^5.2.1
+  http: ^1.2.2
+  flutter_svg: ^2.0.10+1
   flutter_typeahead: ^5.2.0
-  provider: ^6.1.2
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  google_maps_flutter: ^2.9.0
+  location: ^7.0.1
+  permission_handler: ^11.3.1
+  country_picker: ^2.0.26
+  jwt_decoder: ^2.0.1
   http_parser: ^4.0.2
   mime: ^1.0.6
-  flutter_dotenv: ^5.1.0
-  flutter_google_places: ^0.3.0
-  camera: ^0.11.0+2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +67,6 @@ flutter_launcher_icons:
   web:
     generate: true
   image_path: "assets/images/logo-icon.png"
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
