--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http_parser: ^4.0.2
   mime: ^1.0.6
   geocoding: ^3.0.0
+  flutter_lints: ^5.0.0
 
 dev_dependencies:
   flutter_test:
