--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   mime: ^1.0.6
   geocoding: ^3.0.0
   flutter_lints: ^5.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
