--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -4,7 +4,8 @@
   "description": "Semester 4 final group project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start-websocket": "node websocket_server.js"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,8 @@
     "path": "^0.12.7",
     "path-to-regexp": "^8.2.0",
     "send": "^0.19.0",
-    "serve-static": "^1.16.2"
+    "serve-static": "^1.16.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
