--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   geocoding: ^3.0.0
   flutter_lints: ^5.0.0
   provider: ^6.1.2
+  web_socket: ^0.1.6
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
