--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   provider: ^6.1.2
   web_socket: ^0.1.6
   web_socket_channel: ^3.0.1
+  file_picker: ^8.1.3
 
 dev_dependencies:
   flutter_test:
