--- a/Front-End/pubspec.yaml
+++ b/Front-End/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   web_socket: ^0.1.6
   web_socket_channel: ^3.0.1
   file_picker: ^8.1.3
+  flutter_credit_card: ^4.0.1
 
 dev_dependencies:
   flutter_test:
