--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -36,7 +36,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": ">=2.0.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
